# wire-new

./: .gitignore  .mcp.json  Dockerfile  config.yaml  docker-compose.yml  feeds.yaml  pyproject.toml  rebuild_clusters.py  wire.db-shm
wire/: __main__.py  algorithm.py  app.py  auth.py  billing.py  bitcoin.py  cluster.py  config.py  db.py  events.py  group.py  ingest.py  reference.py  rewrite.py  scores.py
wire.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wire/templates/: about.html  audit.html  auth_callback.html  bitcoin.html  contact.html  index.html  login.html  onboarding.html  privacy.html  register.html  river.html  settings.html  terms.html
